[package]
name = "bevy-dmabuf"
version = "0.2.0"
edition = "2024"
license = "MIT/Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Schmarni-Dev/bevy-dmabuf/"
description = "allows importing linux dmabufs into a bevy image"
keywords = ["bevy", "dmabuf", "dmatex"]

[dependencies]
ash.workspace = true
drm-fourcc.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
thiserror.workspace = true
wgpu.workspace = true
zvariant.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
    "bevy_render",
    "raw_vulkan_init"
]

[dev-dependencies]
tokio = { workspace = true,features = ["macros", "rt-multi-thread", "sync"] }
zbus.workspace = true

[dev-dependencies.bevy]
workspace = true
features = [
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_pbr",
    "bevy_winit",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
]

[workspace]
members = ["example_usages"]

[workspace.dependencies]
ash = "0.38"
bevy = { version = "0.17", default-features = false }
drm-fourcc = "2.2"
glam = "0.30"
serde = "1.0"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"
wgpu = "26"
zbus = "5.13"
zvariant = "5.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
