[package]
name = "bevy-dmabuf"
version = "0.2.0"
edition = "2024"
license = "MIT/Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Schmarni-Dev/bevy-dmabuf/"
description = "allows importing linux dmabufs into a bevy image"
keywords = ["bevy", "dmabuf", "dmatex"]

[dependencies]
ash = "0.38"
drm-fourcc = "2.2"
tracing = "0.1"
thiserror = "2.0"
wgpu = "*" # use bevy's wgpu version

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
    "bevy_render",
    "raw_vulkan_init"
]
