[package]
name = "bevy-dmabuf"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Schmarni-Dev/bevy-dmabuf/"
description = "allows importing linux dmabufs into a bevy image"
keywords = ["bevy", "dmabuf", "dmatex"]

[dependencies]
ash = "0.38"
drm-fourcc = "2.2"
thiserror = "2.0"
wgpu = "*" # use bevy's wgpu version

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
    "bevy_render",
    "raw_vulkan_init",
]

[dev-dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_camera",
    "bevy_pbr",
    "bevy_window",
    "bevy_winit",
    "debug",
    "free_camera",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
]

[dev-dependencies]
smithay = { version = "0.7", default-features = false, features = ["use_system_lib", "backend_gbm"] }
image = { version = "0.25", default-features = false, features = ["png"] }


[[example]]
name = "dmabuf_import"
