[package]
name = "example_usages"
version = "0.1.0"
edition = "2024"

[dependencies]
ash.workspace = true
wlx-capture = { git = "https://github.com/galister/wlx-capture", features = [
    "wlr",
] }
bevy-dmabuf.path = ".."
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
vulkano = { git = "https://github.com/Schmarni-Dev/vulkano", branch = "0_35_dmabuf_fixes" }
glam.workspace = true
zbus.workspace = true
